@@ -1,7 +1,6 @@
 import java.io.*;
 import java.util.*;
-
-public class t10067 {
+public class t10067_2 {
     static int N,K;
     static long S[] = new long[100001];
     static long D[][] = new long[2][100001];
@@ -10,50 +9,42 @@ public class t10067 {
     static BufferedWriter bw = new BufferedWriter(new OutputStreamWriter(System.out));
     public static void main(String[] args) throws IOException {
         StringTokenizer st;
-
         st = new StringTokenizer(br.readLine());
         N = Integer.parseInt(st.nextToken());
         K = Integer.parseInt(st.nextToken());
-
         st = new StringTokenizer(br.readLine());
         for(int i = 1 ; i <= N ; i++) {
             S[i] = Short.parseShort(st.nextToken());
             S[i] += S[i-1];
         }
         solve();
-
         br.close();
         bw.flush();
         bw.close();
     }
-
     private static boolean canSkip(int k, int i, int j,int threshold) {
         return (D[(k-1)%2][i] - D[(k-1)%2][j] + S[N] * (S[j] - S[i]))
                 <= threshold * (S[j] - S[i]);
     }
-
     private static boolean canRemoveLastCandidate(int k, int i, int j, int l) {
         return (D[(k-1)%2][i] - D[(k-1)%2][j] + S[N] * (S[j] - S[i])) * (S[l] - S[j])
                 <= (D[(k-1)%2][j] - D[(k-1)%2][l] + S[N] * (S[l] - S[j])) * (S[j] - S[i]);
     }
-
     private static void dp(int k) {
-        LinkedList<Integer> candid = new LinkedList<>();
-        candid.addLast(k-1);
-
+        List<Integer> candid = new ArrayList<>();
+        candid.add(candid.size(),k-1);
         for(int i = k ; i <= N ; i++) {
-            while (candid.size() > 1 && canSkip(k, candid.getFirst(), candid.get(1), (int) S[i])) {
-                candid.removeFirst();
+            while (candid.size() > 1 && canSkip(k, candid.get(0), candid.get(1), (int) S[i])) {
+                candid.remove(0);
             }
-                int j = candid.getFirst();
-                OPT[k][i] = j;
-                D[(k%2)][i] = D[(k-1)%2][j] + S[i] * S[j] - S[N] * S[j] + S[N] * S[i] - (S[i] * S[i]);
-
+            int j = candid.get(0);
+            OPT[k][i] = j;
+            D[k%2][i] = D[(k-1)%2][j] + S[i] * S[j] - S[N] * S[j] + S[N] * S[i] - (S[i] * S[i]);
             while (candid.size() > 1
-                    && canRemoveLastCandidate(k, i, candid.getLast(), candid.get(candid.size()-2))) {
-                candid.removeLast();
+                    && canRemoveLastCandidate(k, i, candid.get(candid.size()-1), candid.get(candid.size()-2))) {
+                candid.remove(candid.size()-1);
             }
-            candid.addLast(i);
+            candid.add(candid.size(),i);
         }
     }
     private static Vector<Integer> backtrace(int ind) {
@@ -65,7 +56,7 @@ public class t10067 {
             ind = OPT[k--][ind];
         }
         Collections.reverse(ret);
-     return ret;
+        return ret;
     }
     private static void solve() throws IOException {
         for(int k = 1 ; k <= K ; k++) {
